--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -72,7 +72,7 @@
   color: #58585B;
   font-size: 0.85em;
   cursor: pointer;
-  font-weight: 400;
+  font-weight: 500;
 }
 #signoutBtn{
   color:black;
@@ -267,6 +267,9 @@ font-size: 16px;
   width: 20px;
   cursor: pointer;
 }
+.changeTheme{
+  cursor: pointer;
+}
 .Tooltip{
   background-color: #f5f5f5;
   /* border: 2px solid #d3dce6; */
@@ -448,4 +451,80 @@ font-size: 16px;
   cursor: pointer;
   
   margin: 10px;
+}
+.saveCodeContainer{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #f3f3f3;
+  z-index: 10000;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.saveCodeMain{
+  position: relative;
+  width: 20%;
+  height: auto;
+  padding: 40px 70px;
+  background-color: white;
+  border:2px solid #d3dce6 ;
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 4px;
+  flex-direction: column;
+}
+
+.saveCodeTitle{
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  font-family: 'Silkscreen', cursive;
+}
+.saveCodeMain form{
+
+  display: flex;
+  height: auto;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+.saveCodeMain form label{
+  margin-bottom: 5px;
+  font-weight: 500;
+}
+.saveCodeMain form input{
+  width: 100%;
+  height: 4vh;
+  padding: 0px 5px;
+  background-color: white;
+  border:2px solid #d3dce6 ;
+  border-radius: 4px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  
+}
+.saveCodeMain form input:focus{
+  background-color: #e8ebef3a;
+  border:2px solid #d3dce6 ;
+  border-radius: 4px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  outline: none;
+}
+.saveCodeMain form button{
+  margin: 15px 0px;
+  /* height: 50px; */
+  width: 30%;
+  padding: 10px 0px ;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: white;
+  border: none;
+  background: #0556f3;
+  color: white;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
