--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,11 +27,14 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
   color: #61dafb;
 }
+
+
 
 @keyframes App-logo-spin {
   from {
@@ -41,6 +44,8 @@
     transform: rotate(360deg);
   }
 }
+
+
 
 .topNavbar{
   position: absolute;
@@ -65,18 +70,27 @@
   
   
 }
+.topNavbar-links div{
+  position: relative;
+  margin-right: 40px;
+  cursor: pointer;
+}
 .topNavbar-links span{
   position: relative;
-  margin-left: 30px;
+  margin-left: 9px;
   text-decoration: none;
   color: #58585B;
   font-size: 0.85em;
-  cursor: pointer;
+  /* cursor: pointer; */
   font-weight: 500;
 }
 #signoutBtn{
   color:black;
   font-weight: 500;
+  cursor: pointer;
+}
+.register , .signin{
+  cursor: pointer;
 }
 
 
@@ -86,8 +100,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px 40px;
-  
-  
+  background-image: linear-gradient( 68.4deg,  rgba(248,182,204,1) 0.5%, rgba(192,198,230,1) 49%, rgba(225,246,240,1) 99.8% );
 }
 
 .projectTitle{
@@ -98,22 +111,30 @@
 
 }
 #brandName{
+  color: rgb(36, 34, 34);
   font-family: 'Silkscreen', cursive;
 }
 #brandSubName{
   font-size: 30px;
   font-weight: 500;
   font-family: 'Caveat', cursive;
+  color: white;
 }
 .selectLanguage{
   display: flex;
   /* align-items: center; */
   justify-content: space-evenly;
   border: 2px solid #d3dce6;
-  border-radius: 2px;
+
   background: #f5f5f5;
-  padding: 12px 10px;
+  padding: 8px 10px;
   min-width: 12vw;
+  background: rgba(255, 255, 255, 0.14);
+border-radius: 6px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(4.3px);
+-webkit-backdrop-filter: blur(4.3px);
+border: 1px solid rgba(255, 255, 255, 0.6);
 }
 .selectLanguage label{
   font-weight: 500;
@@ -124,6 +145,7 @@
   outline:none ;
   border:1px solid #d3dce6;
   border-radius: 2px;
+  background: none;
 }
 .codeArea{
   display: flex;
@@ -219,10 +241,14 @@ font-size: 16px;
   cursor: pointer;
   padding: 3px 10px;
   background: #0556f3;
+  background-image: radial-gradient( circle farthest-corner at 1.3% 2.8%,  rgba(239,249,249,1) 0%, rgba(182,199,226,1) 100.2% );
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(4.3px);
   letter-spacing: 1px;
   font-size: 14px;
   line-height: 20px;
-  color: #ffffff;
+  color: black;
   border: none;
   outline: none;
   border-radius: 2px;
@@ -282,16 +308,7 @@ font-size: 16px;
     /* transition: all .5s; */
     width: max-content;
 }
-.Tooltip::after {
-  content: '';
-  border-width: 5px;
-  border-style: solid;
-  border-color: #f3f3f3 transparent transparent transparent;
-  position: absolute;
-  top: 100%;
-  left: 40%;
-  margin-left: 5%;
-}
+
 .saveCodeImage:hover .Tooltip{
   position: absolute;
   z-index: 1;
@@ -378,6 +395,7 @@ font-size: 16px;
   top: 0;
   left: 0;
   z-index: 10000;
+  background-image: linear-gradient( 68.4deg,  rgba(248,182,204,1) 0.5%, rgba(192,198,230,1) 49%, rgba(225,246,240,1) 99.8% );
 }
 .registeUserForm{
   position: relative;
@@ -389,6 +407,12 @@ font-size: 16px;
 
   border-radius: 4px;
   flex-direction: column;
+  background: rgba(255, 255, 255, 0.14);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(4.3px);
+-webkit-backdrop-filter: blur(4.3px);
+border: 1px solid rgba(255, 255, 255, 0.6);
 
 }
 .registeUserForm form{
@@ -414,15 +438,15 @@ font-size: 16px;
   margin: 10px 0px;
   height: 5vh;
   padding: 0px 5px;
-  background-color: white;
-  border:2px solid #d3dce6 ;
+  border: 1px solid rgba(255, 255, 255, 0.6);
   border-radius: 4px;
   font-weight: 500;
   letter-spacing: 1px;
+  background-color: #e8ebef3a;
 }
 .registeUserForm form input:focus{
   background-color: #e8ebef3a;
-  border:2px solid #d3dce6 ;
+  border:1px solid #d3dce6 ;
   border-radius: 4px;
   letter-spacing: 1px;
   font-weight: 500;
@@ -437,8 +461,12 @@ font-size: 16px;
   cursor: pointer;
   background-color: white;
   border: none;
-  background: #0556f3;
-  color: white;
+  /* background: #0556f3; */
+  background-image: radial-gradient( circle farthest-corner at 1.3% 2.8%,  rgba(239,249,249,1) 0%, rgba(182,199,226,1) 100.2% );
+  /* border: 1px solid rgba(255, 255, 255, 0.6); */
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(4.3px);
+  color: black;
   font-weight: bold;
   letter-spacing: 1px;
 }
@@ -527,4 +555,142 @@ font-size: 16px;
   color: white;
   font-weight: bold;
   letter-spacing: 1px;
+}
+
+.userLinks{
+  position: absolute;
+  top: 3vh;
+  right: 5vh;
+  border:2px solid #d3dce6 ;
+  background-color: #f3f3f3;
+  width: 25vh;
+  height: auto;
+  padding: 20px 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  z-index: 100000;
+
+}
+.userLinks a{
+  
+  width: 100%;
+  height: 20px;
+  cursor: pointer;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  margin-bottom: 5px;
+  border-radius: 2px;
+}
+
+.userFilesContainer{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #f3f3f3;
+  z-index: 10000;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient( 68.4deg,  rgba(248,182,204,1) 0.5%, rgba(192,198,230,1) 49%, rgba(225,246,240,1) 99.8% );
+
+}
+.userFilesMain{
+  position: relative;
+  width: 50%;
+  height: auto;
+  padding: 40px 70px;
+  background-color: white;
+  border:2px solid #d3dce6 ;
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 4px;
+  flex-direction: column;
+background: rgba(255, 255, 255, 0.14);
+border-radius: 6px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(4.3px);
+-webkit-backdrop-filter: blur(4.3px);
+border: 1px solid rgba(255, 255, 255, 0.6);
+}
+
+.userFilesMainTitle{
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  font-family: 'Silkscreen', cursive;
+}
+.userFilesMain table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+
+
+}
+
+.userFilesMain table td, th {
+  border: 1px solid rgba(255, 255, 255, 0.6);
+
+  text-align: left;
+  padding: 8px;
+}
+#tableHeaderRow{
+  background-image: linear-gradient( 68.4deg,  rgba(248,182,204,0.8) 0.5%, rgba(192,198,230,1.14) 49%, rgba(225,246,240,1.14) 99.8% );
+  /* From https://css.glass */
+/* background: rgba(255, 255, 255, 0.14); */
+
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(2.3px);
+-webkit-backdrop-filter: blur(2.3px);
+/* border: 1px solid rgba(255, 255, 255, 0.6); */
+}
+.userFilesMain table td{
+  font-size: 14px;
+}
+
+.userFilesMain table tr {
+  background-color: #f3f3f3;
+}
+.userFileActions{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 3px;
+
+}
+.userFileActions .Action-item{
+  width: 14px;
+  cursor: pointer;
+}
+.Action-item:hover .Tooltip{
+  position: absolute;
+  z-index: 1;
+  visibility: visible;
+  transform: translateY(-30px);
+  /* transform: translateX(-10px); */
+ 
+  /* width: max-content; */
+}
+
+.codeAreaCopyCodeBtn{
+  width: 20px;
+  margin: 0px 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.codeAreaCopyCodeBtn:hover .Tooltip{
+  position: absolute;
+  z-index: 1;
+  visibility: visible;
+  transform: translatey(-30px);
+}
+.codeAreaCopyCodeBtn img{
+  width: 20px;
+  cursor: pointer;
 }
