--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -693,6 +693,7 @@ backdrop-filter: blur(2.3px);
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 .codeAreaCopyCodeBtn:hover .Tooltip{
   position: absolute;
@@ -702,5 +703,57 @@ backdrop-filter: blur(2.3px);
 }
 .codeAreaCopyCodeBtn img{
   width: 20px;
+
+}
+
+.shareCodeImage{
+  width: 22px;
+  margin: 0px 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
+}
+.shareCodeImage:hover .Tooltip{
+  position: absolute;
+  z-index: 1;
+  visibility: visible;
+  transform: translatey(-30px);
+}
+.saveCodeImage img{
+  width: 22px;
+}
+
+
+
+.saveCodeMain .shareCodeLink{
+
+  display: flex;
+  height: auto;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.saveCodeMain .shareCodeLink label{
+  margin-right: 5px;
+  font-weight: 500;
+}
+.saveCodeMain .shareCodeLink input{
+  width: 100%;
+  height: 4vh;
+  padding: 0px 5px;
+  background-color: #e8ebef3a;
+  border:2px solid #d3dce6 ;
+  border-radius: 4px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  
+}
+.saveCodeMain .shareCodeLink input:focus{
+  background-color: #e8ebefa5;
+  border:2px solid #d3dce6 ;
+  border-radius: 4px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  outline: none;
 }
