--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,10 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Silkscreen&display=swap');
 
-/* *{
-  padding: 0;
-  margin: 0;
-} */
 
 .App-logo {
   height: 40vmin;
@@ -152,14 +148,14 @@ border: 1px solid rgba(255, 255, 255, 0.6);
   justify-content: flex-start;
   align-items: flex-start;
   /* flex-direction: column; */
-  max-height: 84vh;
+  max-height: 83.9vh;
   background-color: #f5f5f5;
   border: 2px solid #d3dce6;
   font-family: "euclid_circular";
   border-left: none;
   /* border-bottom: none; */
   /* flex-wrap: wrap; */
-  
+  /* overflow-y: hidden; */
 }
 .inputArea{
   position: relative;
@@ -194,7 +190,7 @@ font-size: 16px;
   width: 50%;
   height: 100%;
   border-left: 2px solid #d3dce6;
-  overflow-y: scroll;
+  
 
 }
 
@@ -268,7 +264,8 @@ backdrop-filter: blur(4.3px);
   position: relative;
     display: flex;
     align-items: center;
-    width: 40%;
+    width: auto;
+    padding: 0px 10px;
     justify-content: space-around;
   
 }
@@ -338,24 +335,29 @@ backdrop-filter: blur(4.3px);
   color: white;
   font-weight: bold;
   letter-spacing: 1px;
+  margin: 0px 5px;
   background-color: #198754;
 }
 #pending{
   color: black;
   font-weight: bold;
   letter-spacing: 1px;
+  margin: 0px 5px;
   background-color: #ffc107;
 }
 #error{
   color: white;
   font-weight: bold;
   letter-spacing: 1px;
+  margin: 0px 5px;
   background-color: #dc3545;
 }
 
 .output-content{
   position: relative;
   margin-left: 10px;
+  height: 75vh;
+  overflow-y: scroll;
 }
 .output-jobId{
   position: relative;
@@ -380,7 +382,7 @@ backdrop-filter: blur(4.3px);
   border-radius: 2px;
   font-weight: bold;
   background-color: #f5f5f5;
-  border: 2px solid #d3dce6;
+  /* border: 2px solid #d3dce6; */
 
 }
 
